--- a/tic_tac_toe.ipynb
+++ b/tic_tac_toe.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 393,
+      "execution_count": 422,
       "metadata": {
         "id": "JypPyC2jKj1Y"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 394,
+      "execution_count": 423,
       "metadata": {
         "id": "S0jXNO4byzQU"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 395,
+      "execution_count": 424,
       "metadata": {
         "id": "WH4ICnQLyzF1"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 396,
+      "execution_count": 425,
       "metadata": {
         "id": "PyOrOUXkyy4v"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 397,
+      "execution_count": 426,
       "metadata": {
         "id": "7_koE4rOyllO"
       },
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 398,
+      "execution_count": 427,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 399,
+      "execution_count": 428,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 400,
+      "execution_count": 429,
       "metadata": {
         "id": "gIuEQrX3z6XE"
       },
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 401,
+      "execution_count": 430,
       "metadata": {
         "id": "L-YpapIz0KqW"
       },
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 402,
+      "execution_count": 431,
       "metadata": {
         "id": "m7RfCKYv0uRZ"
       },
@@ -327,11 +327,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 403,
+      "execution_count": 432,
       "metadata": {
         "id": "-wyI---W3czh"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " | | \n",
+            "-+-+-\n",
+            " | |O\n",
+            "-+-+-\n",
+            " | |X\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the human_move function\n",
         "board_state = [' ', ' ', 'X', ' ', ' ', 'O', ' ', ' ', ' ']\n",
@@ -342,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 404,
+      "execution_count": 433,
       "metadata": {
         "id": "7ERGXnRW4TN_"
       },
@@ -370,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 405,
+      "execution_count": 434,
       "metadata": {
         "id": "LXHaO9ZYzN_3"
       },
@@ -426,8 +438,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Super Human (bot) VS Super computer (bot)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 406,
+      "execution_count": 435,
       "metadata": {},
       "outputs": [
         {
@@ -583,10 +602,101 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 436,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "board start\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            "\n",
+            "You select\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "bot select\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "You select\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X| \n",
+            "\n",
+            "\n",
+            "bot select\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "You select\n",
+            "X| | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "bot select\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "You select\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "bot select\n",
+            "X|O| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "You select\n",
+            "X|O|X\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|X|O\n",
+            "\n",
+            "\n",
+            "It's a draw!\n"
+          ]
+        }
+      ],
+      "source": [
+        "board_state = [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']\n",
+        "playwithbot(1)"
+      ]
     }
   ],
   "metadata": {
