--- a/tic_tac_toe/tic_tac_toe.ipynb
+++ b/tic_tac_toe/tic_tac_toe.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 422,
+      "execution_count": 241,
       "metadata": {
         "id": "JypPyC2jKj1Y"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 423,
+      "execution_count": 242,
       "metadata": {
         "id": "S0jXNO4byzQU"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 424,
+      "execution_count": 243,
       "metadata": {
         "id": "WH4ICnQLyzF1"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 425,
+      "execution_count": 244,
       "metadata": {
         "id": "PyOrOUXkyy4v"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 426,
+      "execution_count": 245,
       "metadata": {
         "id": "7_koE4rOyllO"
       },
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 427,
+      "execution_count": 246,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -220,21 +220,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 428,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def computer_move(board_state):\n",
-        "    best_move = get_best_move(board_state,'O')\n",
-        "    return best_move\n",
-        "\n",
-        "def human_move(board_state):\n",
-        "    best_move = get_best_move(board_state, 'X')\n",
-        "    return best_move\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "aSJ9Fs_00dRl"
@@ -245,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 429,
+      "execution_count": 247,
       "metadata": {
         "id": "gIuEQrX3z6XE"
       },
@@ -269,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 430,
+      "execution_count": 248,
       "metadata": {
         "id": "L-YpapIz0KqW"
       },
@@ -293,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 431,
+      "execution_count": 249,
       "metadata": {
         "id": "m7RfCKYv0uRZ"
       },
@@ -327,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 432,
+      "execution_count": 250,
       "metadata": {
         "id": "-wyI---W3czh"
       },
@@ -340,7 +325,7 @@
             "-+-+-\n",
             " | |O\n",
             "-+-+-\n",
-            " | |X\n"
+            "X| |X\n"
           ]
         }
       ],
@@ -354,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 433,
+      "execution_count": 251,
       "metadata": {
         "id": "7ERGXnRW4TN_"
       },
@@ -365,9 +350,9 @@
           "text": [
             " | | \n",
             "-+-+-\n",
-            " | | \n",
+            " | |O\n",
             "-+-+-\n",
-            "O| | \n"
+            " | | \n"
           ]
         }
       ],
@@ -376,13 +361,12 @@
         "board_state = [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']\n",
         "empty_cells = get_empty_cells(board_state)\n",
         "best_move = computer_move(board_state)\n",
-        "board_state[best_move] = 'O'\n",
         "draw_board(board_state)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 434,
+      "execution_count": 252,
       "metadata": {
         "id": "LXHaO9ZYzN_3"
       },
@@ -441,12 +425,289 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Human VS BOT(RANDOM)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 253,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import random\n",
+        "import math\n",
+        "\n",
+        "\n",
+        "def human_move(board_state):\n",
+        "  while True:\n",
+        "    my_move = input(\"Which cell do you want to place your X in? (0-8): \")\n",
+        "    my_move = int(my_move)\n",
+        "    empty_cell_list = get_empty_cells(board_state)\n",
+        "    if my_move in empty_cell_list:\n",
+        "      board_state[my_move] = 'X'\n",
+        "      break\n",
+        "    else:\n",
+        "      print(\"Cannot make that move. Try again\")\n",
+        "\n",
+        "def computer_move(board_state):\n",
+        "  # you need to code this part\n",
+        "  computer_move = random.randint(0, 8)\n",
+        "  empty_cell_list = get_empty_cells(board_state)\n",
+        "  while computer_move not in empty_cell_list:\n",
+        "    computer_move = random.randint(0, 8)\n",
+        "  board_state[computer_move] = 'O'\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 254,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "board start\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| |O\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "X| |O\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            "Human wins!\n"
+          ]
+        }
+      ],
+      "source": [
+        "board_state = [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']\n",
+        "def playwithRand():\n",
+        "    print(\"board start\")\n",
+        "    draw_board(board_state)\n",
+        "    print(\"\\n\") \n",
+        "\n",
+        "    while True: \n",
+        "        human_move(board_state)\n",
+        "        draw_board(board_state)\n",
+        "        state, winner = is_winning(board_state)\n",
+        "        print(\"\\n\") \n",
+        "        if state:\n",
+        "            print(f\"Human wins!\")\n",
+        "            break\n",
+        "        elif len(get_empty_cells(board_state)) == 0:\n",
+        "            print(\"It's a draw!\")\n",
+        "            break\n",
+        "\n",
+        "        computer_move(board_state)\n",
+        "        draw_board(board_state)\n",
+        "        state, winner = is_winning(board_state)\n",
+        "        print(\"\\n\") \n",
+        "        if state:\n",
+        "            print(f\"BOT wins!\")\n",
+        "            break\n",
+        "        elif len(get_empty_cells(board_state)) == 0:\n",
+        "            print(\"It's a draw!\")\n",
+        "            break\n",
+        "\n",
+        "playwithRand()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Human VS BOT(MINIMAX)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 255,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def computer_move(board_state):\n",
+        "    best_move = get_best_move(board_state,'O')\n",
+        "    return best_move\n",
+        "\n",
+        "# def human_move(board_state):\n",
+        "#     best_move = get_best_move(board_state, 'X')\n",
+        "#     return best_move"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 256,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "board start\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " | | \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            " | | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            " |O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O| \n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X| | \n",
+            "\n",
+            "\n",
+            "X| | \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            "X|X| \n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O| \n",
+            "\n",
+            "\n",
+            "X|X|O\n",
+            "-+-+-\n",
+            "O|O|X\n",
+            "-+-+-\n",
+            "X|O|X\n",
+            "\n",
+            "\n",
+            "It's a draw!\n"
+          ]
+        }
+      ],
+      "source": [
+        "board_state = [' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ']\n",
+        "def playwithAI():\n",
+        "    print(\"board start\")\n",
+        "    draw_board(board_state)\n",
+        "    print(\"\\n\") \n",
+        "\n",
+        "    while True: \n",
+        "        human_move(board_state)\n",
+        "        draw_board(board_state)\n",
+        "        state, winner = is_winning(board_state)\n",
+        "        print(\"\\n\") \n",
+        "        if state:\n",
+        "            print(f\"Human wins!\")\n",
+        "            break\n",
+        "        elif len(get_empty_cells(board_state)) == 0:\n",
+        "            print(\"It's a draw!\")\n",
+        "            break\n",
+        "\n",
+        "        best_move = computer_move(board_state)\n",
+        "        board_state[best_move] = 'O'\n",
+        "        draw_board(board_state)\n",
+        "        state, winner = is_winning(board_state)\n",
+        "        print(\"\\n\") \n",
+        "        if state:\n",
+        "            print(f\"BOT wins!\")\n",
+        "            break\n",
+        "        elif len(get_empty_cells(board_state)) == 0:\n",
+        "            print(\"It's a draw!\")\n",
+        "            break\n",
+        "\n",
+        "playwithAI()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Super Human (bot) VS Super computer (bot)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 435,
+      "execution_count": 257,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def human_move(board_state):\n",
+        "    best_move = get_best_move(board_state, 'X')\n",
+        "    return best_move"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 258,
       "metadata": {},
       "outputs": [
         {
@@ -602,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 436,
+      "execution_count": 259,
       "metadata": {},
       "outputs": [
         {
